<resources>
    <string name="app_name">PABF195</string>
    <string name="button_kisah">Kisah Inspiratif</string>
    <string name="Button_Budidaya">Info Budidaya Jagung</string>
    <string name="Button_Hitung">Hitung Jarak Tanam</string>
    <string name="Button_Tanya">Pertanyaan Tentang Budidaya Jagung</string>
    <string name="Text_Judul">Corn Farming</string>




    <string name="Text_Info1">Kiat sukses budidaya jagung manis organik</string>
    <string name="Text_Info2">

    \n\n
         Budidaya jagung manis (Zea mays saccharata) lebih rentan dari serangan hama dan penyakit dibanding jagung biasa. Namun dari sisi nilai jual, jagung manis menawarkan harga yang lebih baik sehingga animo budidaya jagung manis tak pernah surut. Karena sifatnya yang bisa dikonsumsi langsung seperti jagung bakar atau jagung rebus, pasar jagung manis terbuka sampai ke tingkat retail.
         Jagung manis berkembang dari tipe jagung biasa jenis dent dan flint. Pada jagung manis terjadi mutasi gen resesif yang menghambat perubahan gula menjadi pati. Kadar gula pada jagung manis meningkat mulai hari ke-5 hinggan hari ke-15.
         \n\n
         Budidaya jagung manis bisa dilakukan dalam kisaran iklim yang luas. Tanaman ini memiliki tingkat adaptasi yang tinggi. Di Indonesia jagung manis bisa dibudidayakan mulai dari dataran rendah hingga pengunungan dengan ketinggian 1.800 meter dpl bahkan dibelahan dunia lain bisa tumbuh pada 3.000 meter dpl. Suhu optimum untuk pertumbuhan jagung manis adalah 21-27oC, pada masa perkecambahan benih 23-27oC. Secara teori budidaya jagung manis bisa tumbuh di atas tanah dengan tingkat keasaman 5-8 pH.
         \n\n
         Budidaya jagung manis tidak akan maksimal apabila kebutuhan hara tidak tercukupi. Tanaman ini memerlukan unsur nitrogen (N) dalam jumlah besar. Namun pemberian pupuk harus memperhatikan keseimbangan antara nitrogen, kalium (K) dan pospat (P).
         \n\n
         Pengolahan lahan secara organik
         Budidaya jagung manis bisa ditanam di lahan bekas sawah secara langsung atau bisa dibuat bedengan. Apabila lahan yang dipakai bekas sawah, usahakan agar lahan tidak tergenang air. Bedengan pada tanaman jagung berfungsi untuk mengatur saluran drainase. Bedengan bisa dibuat dengan ukuran lebar 1 meter dan tinggi 20-30 cm. Atur jarak antar bedengan sebesar 30 cm. Dalam satu bedeng bisa ditanam dua larik tanaman.
         Pemupukan dasar untuk budidaya jagung manis organik sebaiknya campuran dari pupuk kotoran ayam dengan kotoran sapi atau kambing dengan komposisi 1:1. Pupuk kotoran ayam memberikan kadar N yang banyak dan lebih cepat terurai, sedangkan pupuk kotoran sapi atau kambing lebih kaya akan K dan P. Kebutuhan pupuk dengan metode organik adalah sekitar 5 ton per hektar.
         \n\n
    Penanaman dan perawatan
    Penanaman jagung manis paling efektif dengan cara ditugal. Buatlah lubang sedalam 2-3 cm kemudian masukan 2 butir benih jagung. Setelah itu tutup dengan tanah dan kompos, kemudian siram agar kelembaban tanah terjaga. Kebutuhan benih budidaya jagung manis adalah 8 kg per hektar.
    Jarak tanam pada budidaya jagung manis adalah 60-75 cm. Jarak tanam ini mengikuti jumlah populasi ideal tanaman. Budidaya jagung manis akan munai hasil baik dengan menjaga populasi tanaman sebanyak 34.000-37.000 tanaman per hektar.
    \n\n
    Pengendalian hama dan penyakit
    Hama yang banyak ditemukan dalam budidaya jagung manis antara lain penggerek, penggerek tongkol, belalang, kutu daun dan tikus. Berikut sifat-sifat hama pada tanman jagung manis:
    1. Penggerek batang jagung (O. furnacalis), hama ini menyerang tanaman pada vase vegetatif maupun generatif. Kerusakan tanaman terjadi karena larva menggerek bagian batang tanaman untuk mendapatkan makanan. Penggerek batang jagung bisa dikendalikan secara teknis dengan mengatur rotasi tanam seperti dengan kedelai dan kacang tanah. Selain itu bisa juga dengan dengan memotong bunga jantan dan menerapkan waktu tanam yang tepat. Pembasmian hayati dengan memanfaatkan musuh alami seperti Trichogramma spp. atau predator alami Euborellia annulata yang memangsa larva.
    2. Ulat Tongkol (H. armigera), hama ini menyerang tongkol jagung. Pada awalnya imago meninggalkan telur pada rambut-rambut jagung. Setelah larva tumbuh akan masuk kedalam tongkol. Hama ini mempunyai kebiasaan berpindah-pindah, sehingga kerusakan yang ditimbulkan pada tongkol jagung bisa lebih banyak dibanding jumlah larvanya. Pencegahan terhadap hama ini adalah dengan menerapkan pengolahan tanah yang baik. Pengolahan tanah yang akan mengurangi populasi ulat tongkol berikutnya. Musuh utama dari hama ini adalah Trichogramma spp. yang merupakan parasit telur dan Eriborus argentiopilosa parasit pada larva muda.
    3. Kutu Daun (R. maidis), hama ini mengeluarkan embun madu pada daun yang berubah menjadi jelaga warna hitam. Noda-noda tersebut akan menghambat daun melakukan fotosintesis. Musuh alami hama ini adalah Lysiphlebus mirzai, Coccinella sp. dan Micraspis sp. Kultur teknis yang bisa dilakukan untuk menghindari serangan hama ini dengan melakukan polikultur tanaman atau menumpangsarikan jagung manis dengan tanaman lain.
    4. Belalang (Oxya spp.), hama ini banyak berkembang didataran rendah yang berupa padang rumput atau pesawahan. Beberapa musuh alami belalang adalah Systoechus sp., burung dan laba-laba. Selain itu patogen seperti Metarhizium anisopliae merupakan musuh belalang. Metarhizium anisopliae merupakan bahan biopestisida yang sanggup mengendalikan 70-90% hama belalang.
    5. Tikus (Rattus argentiventer), hama ini biasanya menyerang tanaman jagung manis yang ditanam di lahan sawah. Tikus memakan tongkol muda yang sedang matang susu, umumnya tikus memakan tongkol dari ujung hingga pertengahan pangkal. Pengendalian hama tikus secara organik adalah dengan memburu dan membasmi tikus dari sarangnya.
    \n\n
    Panen budidaya jagung manis
    Jagung manis mulai berbunga setelah 50 hari. Sepuluh hari sebelum panen utama, sebaiknya dilakukan panen jagung muda. Pada masa ini akan tumbuh dua tongkol jagung, petik tongkol yang paling bawah. Pemanenan tongkol muda dimaksudkan agar asupan nutrisi pada tongkol utama tercukupi, sehingga hasilnya maksimal. Selain memetik tongkol muda, papaslah daun bagian bawah sebanyak 2-3 helai. Apabila muncul kembali tunas-tunas buah muda sebelum panen utama, petiklah sebagai panen tambahan. Panen utama budidaya jagung manis bisa dilakukan setelah tanaman berumur 65-75 hari.
    Metode panen seperti ini cocok dilakukan untuk jenis tanaman jagung manis satu tongkol. Jenis ini digunakan luas oleh para petani di Indonesia, seperti varietas Seleksi Dramaga-2 (SD-2). Ada juga varietas jagung manis 2 tongkol, dimana dua tongkol jagung dibiarkan tumbuh hingga panen akhir.

</string>

    <string name="Text_Inspiratif1">Ingin Tahu Kisah Inspiratif pebisnis Jagung</string>
    <string name="Text_Link">Silahkan Klik Link di bawah ini!</string>
    <string name="Url_Link">https://www.pioneer.com/web/site/indonesia/Berita-Umum/kisah-pengusaha-sukses-menekuni-bisnis-jagung</string>
    <string name="Button_Open">Open</string>
    <string name="bilangan_pertama">Luas Lahan (Ha)</string>
    <string name="bilangan_kedua">Jarak Tanam (m2)</string>
    <string name="result">Result</string>
    <string name="del">Delete</string>
    <string name="https_www_pioneer_com_web_site_indonesia_berita_umum_kisah_pengusaha_sukses_menekuni_bisnis_jagung">https://www.pioneer.com/web/site/indonesia/Berita-Umum/kisah-pengusaha-sukses-menekuni-bisnis-jagung</string>
    <string name="btnDivision">/</string>
    <string name="Judul_Tanya">Pertanyaan Seputar Budidaya Jagung</string>
    <string name="Soal1">1. Pupuk yang baik digunakan untuk menanam jagung adalah...</string>
    <string name="Tanya2">2. Benih jagung yang paling cepat panen adalah...</string>
    <string name="Submit">Submit</string>
    <string name="Jawaban">Jawaban Anda</string>
    <string name="Kunci">Jawaban yang Benar</string>
    <string name="Kunci1">Pupuk urea,Pupuk SP-36,Pupuk KCl,Pupuk ZA, dan Pupuk NPK</string>
    <string name="Kunci2">Benih Jagung Hibrida merupakan benih jagung yang cepat panen</string>
</resources>

