<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F8F0"
    android:orientation="vertical"
    tools:context=".JawabanSoal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/Jawaban"
        android:textColor="#FF9800"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pertama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/kedua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="15dp"
        android:textSize="17sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/Kunci"
        android:textColor="#4CAF50"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="left"
        android:text="@string/Kunci1"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/kedua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="15dp"
        android:gravity="left"
        android:text="@string/Kunci2"
        android:textSize="17sp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/farmer" />


</LinearLayout>