<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="273dp"
        android:layout_height="419dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/farmer" />

    <TextView
        android:id="@+id/Text_Label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text_Inspiratif1"
        android:textColor="#090909"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363" />

    <TextView
        android:id="@+id/Text_Label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text_Link"
        android:textColor="#470404"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Text_Label1"
        app:layout_constraintVertical_bias="0.228" />

    <EditText
        android:id="@+id/etUri"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="@string/https_www_pioneer_com_web_site_indonesia_berita_umum_kisah_pengusaha_sukses_menekuni_bisnis_jagung"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Text_Label2" />

    <Button
        android:id="@+id/Open_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFEB3B"
        android:onClick="openWebsite"
        android:text="@string/Button_Open"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUri"
        app:layout_constraintVertical_bias="0.034" />

</androidx.constraintlayout.widget.ConstraintLayout>